traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:21: error: illegal start of statement (no modifiers allowed here)
	override def forward(i:Int)  { 
        ^TraversalDiagonal:24: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^TraversalDiagonal:27: error: illegal start of statement (no modifiers allowed here)
	override def backward(i:Int) {
        ^TraversalDiagonal:30: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^TraversalDiagonal:33: error: Missing closing brace `}' assumed here
}
^